# yandex-search-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/yandex_search/: __init__.py  _base_client.py  _xml_parser.py  async_client.py  client.py  exceptions.py
src/yandex_search/models/: __init__.py  enums.py  gen.py  image.py  request.py  web.py
tests/: conftest.py  test_client.py  test_xml_parser.py
tests/fixtures/: gen_response.json  image_response.xml  web_response.xml
