[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-search-api"
version = "0.1.0"
description = "Python client for Yandex Search API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "lxml-stubs>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
