[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-search-api"
version = "0.1.0"
description = "Python client for Yandex Search API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "pylint>=3.0",
    "mypy>=1.10",
    "lxml-stubs>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

# Pylint: relax rules so CI passes (docstrings, sync/async duplication, lxml C extension)
[tool.pylint.main]
extension-pkg-allow-list = ["lxml", "lxml.etree", "lxml.html"]

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-locals",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "redefined-builtin",
  "duplicate-code",
  "c-extension-no-member",
  "broad-exception-caught",
  "import-outside-toplevel",
  "unused-argument",
]

[tool.pylint.design]
max-args = 18
max-locals = 20
max-attributes = 12
